[tool.poetry]
name = "ciptools-flask"
version = "0.0.0"  # DO NOT CHANGE -- set during build
description = "Libraries for using Flask."
license = "Apache-2.0"
authors = ["Center for an Informed Public <ciptools@uw.edu>"]
packages = [{include = "ciptools", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
statsd = "^3.3.0"
ciptools = "^1.3.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-flake8 = "^1.1.1"
flake8-builtins = "^1.5.3"
flake8-bugbear = "^22.1.11"
flake8-comprehensions = "^3.8.0"
flake8-isort = "^4.1.1"
pep8-naming = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--flake8 -p no:warnings --log-level=ERROR"

[[tool.poetry.source]]
name = "uwcip"
url = "https://uwcip.github.io/pypi/simple/"
