[tool.poetry]
name = "ciptools-flask"
version = "0.0.0"  # DO NOT CHANGE -- set during build
description = "Libraries for using Flask."
license = "Apache-2.0"
authors = ["Center for an Informed Public <ciptools@uw.edu>"]
packages = [{include = "ciptools", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.3"
statsd = "^4.0.1"
ciptools = "^1.3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-isort = "^3.0.0"
pytest-flakes = "^4.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--isort --flakes -p no:warnings --log-level=ERROR"

[[tool.poetry.source]]
name = "uwcip"
url = "https://uwcip.github.io/pypi/simple/"
